# genai

./: ChatPromptTemplate.ipynb  HCPCS Codes.csv  chains.ipynb  chat_history.txt  codes.csv  codes.xlsx  conversation_chatbot.py  dockerprompt.txt  embedding.ipynb  llm_chains_from_scratch.ipynb  loaders.ipynb  ml_bot.ipynb  multimodal_messages.ipynb  output_parsers.ipynb  prompt_engineering.ipynb  pydantic.ipynb  pyproject.toml  qa_bot.ipynb  rag.ipynb  runnables.ipynb  sample_html.html  sample_json.json  structured_output.ipynb  summarizer_model.py  summarizer_template.json  summarizer_with_prompt.py  test.ipynb  tools.ipynb  validators.ipynb
