[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.65.0",
    "ipykernel>=7.2.0",
    "jq>=1.11.0",
    "langchain-community>=0.4.1",
    "langchain[google-genai]>=1.2.10",
    "lxml>=6.0.2",
    "pypdf>=6.8.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.2",
]
